--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
 ﻿anyio==3.6.1
+async-generator==1.10
+attrs==22.1.0
 autopep8==1.7.0
 certifi==2022.6.15
+cffi==1.15.1
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.3
+outcome==1.2.0
 pycodestyle==2.9.1
+pycparser==2.21
+PySocks==1.7.1
 python-dotenv==0.20.0
 rfc3986==1.5.0
+selenium==4.4.3
 sniffio==1.2.0
+sortedcontainers==2.4.0
 tekore==4.4.0
 toml==0.10.2
+trio==0.21.0
+trio-websocket==0.9.2
+urllib3==1.26.12
+wsproto==1.2.0
