--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.3
+jsonschema==4.16.0
 outcome==1.2.0
 pycodestyle==2.9.1
 pycparser==2.21
+pyrsistent==0.18.1
 PySocks==1.7.1
 python-dotenv==0.20.0
 rfc3986==1.5.0
