--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,43 @@
-﻿anyio==3.6.1
+anyio==3.6.1
+astroid==2.12.10
 async-generator==1.10
 attrs==22.1.0
 autopep8==1.7.0
 certifi==2022.6.15
 cffi==1.15.1
+charset-normalizer==3.1.0
+colorama==0.4.5
+dill==0.3.5.1
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.3
+isort==5.10.1
 jsonschema==4.16.0
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
 outcome==1.2.0
+packaging==23.0
+platformdirs==2.5.2
 pycodestyle==2.9.1
 pycparser==2.21
+pylint==2.15.3
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-dotenv==0.20.0
+requests==2.28.2
 rfc3986==1.5.0
 selenium==4.4.3
 sniffio==1.2.0
 sortedcontainers==2.4.0
 tekore==4.4.0
 toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.5
+tqdm==4.65.0
 trio==0.21.0
 trio-websocket==0.9.2
 urllib3==1.26.12
+webdriver-manager==3.8.5
+wrapt==1.14.1
 wsproto==1.2.0
