--- a/requirements.txt
+++ b/requirements.txt
@@ -15,21 +15,26 @@ idna==3.3
 isort==5.10.1
 jsonschema==4.16.0
 lazy-object-proxy==1.7.1
+markdown-it-py==3.0.0
 mccabe==0.7.0
+mdurl==0.1.2
 outcome==1.2.0
 packaging==23.0
 platformdirs==2.5.2
 pycodestyle==2.9.1
 pycparser==2.21
+Pygments==2.16.1
 pylint==2.15.3
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-dotenv==0.20.0
 requests==2.28.2
 rfc3986==1.5.0
+rich==13.5.3
 selenium==4.4.3
 sniffio==1.2.0
 sortedcontainers==2.4.0
+strutils @ file:///C:/Users/vinlin/repos/strutils
 tekore==4.4.0
 toml==0.10.2
 tomli==2.0.1
