--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==3.1.0
 colorama==0.4.5
+cryptography==41.0.4
+Deprecated==1.2.14
 dill==0.3.5.1
 h11==0.12.0
 httpcore==0.15.0
@@ -23,8 +25,11 @@ packaging==23.0
 platformdirs==2.5.2
 pycodestyle==2.9.1
 pycparser==2.21
+PyGithub==1.59.1
 Pygments==2.16.1
+PyJWT==2.8.0
 pylint==2.15.3
+PyNaCl==1.5.0
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-dotenv==0.20.0
