--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ isort = "^5.12.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+counters = "counters.cli:main"
